[gd_scene load_steps=5 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" uid="uid://cnfeqxfdj1ll4" path="res://algorithms/proceduralgeneration/voronoi_diagrams/VoronoiDiagrams.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy_multiplier = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy_multiplier = 0.3

[node name="VoronoiDiagrams" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="VoronoiSpace" type="Node3D" parent="."]
visible = false

[node name="SeedPoints" type="Node3D" parent="VoronoiSpace"]

[node name="VoronoiCells" type="Node3D" parent="VoronoiSpace"]

[node name="Boundaries" type="Node3D" parent="VoronoiSpace"]

[node name="SpaceLabel" type="CSGBox3D" parent="VoronoiSpace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.3, 0.3)

[node name="GenerationEngine" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)
visible = false

[node name="EngineCore" type="CSGBox3D" parent="GenerationEngine"]
material_override = SubResource("StandardMaterial3D_2")
size = Vector3(3, 3, 3)

[node name="EngineLabel" type="CSGBox3D" parent="GenerationEngine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(3, 0.3, 0.3)

[node name="GenerationMethods" type="Node3D" parent="GenerationEngine"]

[node name="FortuneCore" type="CSGSphere3D" parent="GenerationEngine/GenerationMethods"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="DelaunayCore" type="CSGSphere3D" parent="GenerationEngine/GenerationMethods"]
material_override = SubResource("StandardMaterial3D_3")

[node name="LloydCore" type="CSGSphere3D" parent="GenerationEngine/GenerationMethods"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="DistanceFields" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)
visible = false

[node name="FieldCore" type="CSGBox3D" parent="DistanceFields"]
material_override = SubResource("StandardMaterial3D_2")
size = Vector3(3, 3, 3)

[node name="FieldLabel" type="CSGBox3D" parent="DistanceFields"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(3, 0.3, 0.3)

[node name="DistanceIndicators" type="Node3D" parent="DistanceFields"]

[node name="SweepLine" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)
visible = false

[node name="SweepCore" type="CSGBox3D" parent="SweepLine"]
material_override = SubResource("StandardMaterial3D_2")
size = Vector3(8, 0.2, 0.5)

[node name="SweepLabel" type="CSGBox3D" parent="SweepLine"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.3, 0.3)

[node name="VoronoiMetrics" type="Node3D" parent="."]
visible = false

[node name="UniformityMeter" type="Node3D" parent="VoronoiMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="UniformityBase" type="CSGBox3D" parent="VoronoiMetrics/UniformityMeter"]
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.2, 1)

[node name="UniformityIndicator" type="CSGSphere3D" parent="VoronoiMetrics/UniformityMeter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")
radius = 0.3

[node name="CoverageMeter" type="Node3D" parent="VoronoiMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="CoverageBase" type="CSGBox3D" parent="VoronoiMetrics/CoverageMeter"]
material_override = SubResource("StandardMaterial3D_1")
size = Vector3(4, 0.2, 1)

[node name="CoverageIndicator" type="CSGSphere3D" parent="VoronoiMetrics/CoverageMeter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")
radius = 0.3

[node name="Grid" type="Node3D" parent="."]
visible = false

[node name="GridLines" type="Node3D" parent="Grid"]
